# flatbox_legacy

./: .gitignore  Cargo.toml  README.md  assets.pkg  doc  scene.ron  test
assets/: model.mtl  my_scene.ron  skybox.mtl  world.ron
assets/models/: skybox.mtl  untitled.gltf
assets/saves/: world.tar.lz4
assets/scenes/: my_scene.ron
assets/scripts/: script.lua
docs/: 404.html  chapter_1.html  index.html  print.html
docs-src/: book.toml
examples/: .goutputstream-NU8Z31  .goutputstream-OQGY31  audio.rs  el.rs  lua.rs  packaged_scene.rs  pbr.rs  physics.rs  serde.rs  test.rs  texture.rs
examples/modules/: materials.rs  mod.rs  save.rs
examples/shaders/: my_material.fs  my_material.vs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  material.rs
shaders/: fragment.glsl  fragment_combined.glsl  fragment_debug.glsl  fragment_simple.glsl  fragment_textured.glsl  vertex.glsl  vertex_combined.glsl  vertex_simple.glsl  vertex_textured.glsl
src/: despero.rs  ecs.rs  error.rs  essentials.rs  extras.rs  lib.rs  main.rs  physics.rs  prelude.rs  prelude_eo.rs
src/assets/: .goutputstream-GZT931  asset_manager.rs  mod.rs  save_load.rs  scene.rs  ser_component.rs  world_serializer.rs
src/audio/: cast.rs  error.rs  listener.rs  mod.rs  sound.rs  volume.rs
src/despero/esperanto/: esperanto.rs
src/despero/graphics/: camera.rs  inits.rs  mod.rs  model.rs  models.rs  vulkanish.rs
src/ecs/: event.rs  event_old.rs  mod.rs  runners.rs  systems.rs
src/engine/: camera.rs  debug.rs  light.rs  mod.rs  model.rs  screenshot.rs  texture.rs  transform.rs
src/math/: mod.rs  radian.rs  transform.rs
src/physics/: collider.rs  components.rs  debug_render.rs  error.rs  mesh.rs  mod.rs  phys_bundle.rs  physics_handler.rs  rigidbody.rs  types.rs
src/render/: buffer.rs  commandbuffers.rs  debug.rs  mod.rs  pipeline.rs  queues.rs  renderer.rs  screenshot.rs  surface.rs  swapchain.rs  systems.rs  transform.rs
src/render/backend/: buffer.rs  commandbuffers.rs  depth_image.rs  descriptor_pool.rs  instance.rs  mod.rs  pipeline.rs  queues.rs  shader.rs  surface.rs  swapchain.rs  window.rs
src/render/gui/: ctx.rs  mod.rs
src/render/pbr/: camera.rs  color.rs  cubemap.rs  gltf.rs  light.rs  material.rs  mod.rs  model.rs  skybox.rs  texture.rs
src/render/pbr/gltf/: mod.rs
src/scripting/: impls.rs  mod.rs  script.rs  wrappers.rs
src/shaders/: defaultmat.fs  defaultmat.vs  fragment_combined.glsl  fragment_debug.glsl  fragment_simple.glsl  fragment_simple2.glsl  skybox.fs  skybox.vs  vertex_combined.glsl  vertex_debug.glsl  vertex_simple2.glsl
src/time/: mod.rs  time.rs  timer.rs
