[package]
name = "despero"
version = "0.0.1"
authors = ["Koncepto Sociala"]
edition = "2021"

license = "Unlicense"
description = "Rusty game engine, using API Vulkan and implementing paradigm of ECS"
homepage = "https://konceptosociala.eu.org/despero"
documentation = "https://docs.rs/despero"
repository = "https://github.com/konceptosociala/despero"
readme = "README.md"

keywords = ["gamedev", "graphics", "engine"]
categories = ["game-development", "game-engines", "rendering"]

exclude = [
    "test.sh",
    "doc.sh",
]

[dependencies]
# Assets
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8.0"
lz4 = "1.24.0"
tobj = "3.2.3"
collada = "0.15.0"

# Misc
log = "0.4.17"
env_logger = "0.10.0"
nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
thiserror = "1.0.38"

# Rendering
ash = "0.37.0"
ash-window = "0.11.0"
gpu-allocator = "0.21.0"
image = "0.24.5"
raw-window-handle = "0.4.2"
vk-shader-macros = "0.2.8"
winit = "0.27.5"

# ECS
bus = "2.3.0"
hecs = { git = "https://github.com/konceptosociala/despero-hecs", features = ["column-serialize"] }
hecs-schedule = { git = "https://github.com/konceptosociala/despero-hecs-schedule" }

# Physics
rapier3d = { version = "0.16.1", features = ["debug-render", "serde-serialize"] }

# UI
egui = "0.20.1"
egui-winit = "0.20.1"
egui-winit-ash-integration = "0.3.0"

# Scripting
mlua = { version = "0.8.6", features = ["lua51", "vendored"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
