[package]
name = "despero"
version = "0.0.1"
authors = ["Koncepto Sociala"]
edition = "2021"

license = "Unlicense"
description = "Rusty game engine, using API Vulkan and implementing paradigm of ECS"
homepage = "https://konceptosociala.eu.org/softvaro/despero"
documentation = "https://docs.rs/despero"
repository = "https://github.com/konceptosociala/despero"
readme = "README.md"

keywords = ["gamedev", "graphics", "engine"]
categories = ["game-development", "game-engines", "rendering"]

exclude = [
    "test.sh",
    "doc.sh",
]

[dependencies]
# Assets
serde = { version = "1.0.152", features = ["derive"] }
typetag = "0.2.8"
ron = "0.8.0"
lz4 = "1.24.0"
tobj = "3.2.3"
collada = "0.15.0"

# Misc
log = "0.4.17"
env_logger = "0.10.0"
nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
thiserror = "1.0.38"

# Audio
kira = "0.7.3"

# Rendering
ash = "0.37.0"
ash-window = "0.11.0"
gpu-allocator = "0.21.0"
image = "0.24.5"
raw-window-handle = "0.4.2"
vk-shader-macros = "0.2.8"
winit = { version = "0.27.5" }

# ECS
hecs = { git = "https://github.com/konceptosociala/despero-hecs", features = ["column-serialize"] }
hecs-schedule = { git = "https://github.com/konceptosociala/despero-hecs-schedule" }

# Physics
rapier3d = { version = "0.16.1", features = ["debug-render", "serde-serialize"] }

# UI
egui = { version = "0.20.1", optional = true }
egui-winit = { version = "0.20.1", optional = true }
egui-winit-ash-integration = { version = "0.3.0", optional = true }

# Scripting
mlua = { version = "0.8.6", features = ["lua51", "vendored"] }

[features]
default = ["egui"]
egui = ["dep:egui", "dep:egui-winit", "dep:egui-winit-ash-integration"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
