[package]
name = "sonja"
version = "0.2.0"
authors = ["Koncepto Sociala"]
edition = "2021"

license = "Unlicense"
description = "Rusty game engine, using API Vulkan and implementing paradigm of ECS"
homepage = "https://konceptosociala.eu.org/softvaro/sonja"
documentation = "https://docs.rs/sonja"
repository = "https://github.com/konceptosociala/sonja"
readme = "README.md"

keywords = ["gamedev", "graphics", "engine"]
categories = ["game-development", "game-engines", "rendering"]

[dependencies]
# Rendering
ash = { version = "0.37.3", optional = true }
ash-window = { version = "0.11.0", optional = true }
gpu-allocator = { version = "0.21.0", optional = true }
raw-window-handle = { version = "0.4.2", optional = true }
vk-shader-macros = { version = "0.2.8", optional = true }
winit = { version = "0.27.5", optional = true }
tobj = { version = "3.2.3", optional = true }
collada = { version = "0.15.0", optional = true }
image = { version = "0.24.5", optional = true }

# UI
egui = { version = "0.20.1", optional = true }
egui-winit = { version = "0.20.1", optional = true }
egui-winit-ash-integration = { version = "0.3.0", optional = true }

# Assets
serde = { version = "1.0.152", features = ["derive"] }
typetag = "0.2.8"
ron = "0.8.0"
lz4 = "1.24.0"
tar = "0.4.38"

# Misc
parking_lot = { version = "0.12.1", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
pretty_env_logger = "0.5.0"
nalgebra = { version = "0.31.2", features = ["serde-serialize", "mint"] }
thiserror = "1.0.38"
as-any = "0.3.0"
readonly = "0.2.8"

# Audio
kira = "0.8.3"

# ECS
hecs = { package = "despero-hecs", version = "0.9.1-f", features = ["column-serialize", "macros"] }
hecs-schedule = { package = "despero-hecs-schedule", version = "0.6.2" }

# Physics
rapier3d = { version = "0.16.1", features = ["debug-render", "serde-serialize"] }

# Scripting
mlua = { version = "0.8.6", features = ["lua51", "vendored"] }

[features]
default = ["render", "egui"]

egui = [
    "dep:egui", 
    "dep:egui-winit", 
    "dep:egui-winit-ash-integration"
]

render = [
    "dep:ash",
    "dep:ash-window",
    "dep:gpu-allocator",
    "dep:raw-window-handle",
    "dep:vk-shader-macros",
    "dep:winit",
    "dep:tobj",
    "dep:collada",
    "dep:image"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
